--- a/app/bower.json
+++ b/app/bower.json
@@ -10,7 +10,10 @@
     "angular-resource": "^1.4.0",
     "angular-route": "^1.4.0",
     "angular-sanitize": "^1.4.0",
-    "angular-touch": "^1.4.0"
+    "angular-touch": "^1.4.0",
+    "bootstrap-rtl": "3.2.0-rc2",
+    "font-awesome": "fontawesome#4.2.0",
+    "morris.js": "morrisjs#~0.5.1"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
