--- a/app/bower.json
+++ b/app/bower.json
@@ -11,9 +11,9 @@
     "angular-route": "^1.4.0",
     "angular-sanitize": "^1.4.0",
     "angular-touch": "^1.4.0",
-    "bootstrap-rtl": "3.2.0-rc2",
     "font-awesome": "fontawesome#4.2.0",
-    "morris.js": "morrisjs#~0.5.1"
+    "morris.js": "morrisjs#~0.5.1",
+    "flot": "0.7"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
